Correct blurry text shadow

--- a/src/styles/shadow.scss
+++ b/src/styles/shadow.scss
@@ -11,5 +11,5 @@
 }
 
 .text-shadow {
-    text-shadow: 1px 1px 2px rgba(66, 68, 90, 1);
+    text-shadow: 1px 1px 2px rgb(138, 139, 145);
 }
